fix: Alignment of 3d viewer text, increased plot height

--- a/src/containers/Cfe/style.css
+++ b/src/containers/Cfe/style.css
@@ -80,6 +80,7 @@
         line-height: 20px;
         height: auto;
         white-space: nowrap;
+        margin-top: 0;
 
         & .label {
             color: var(--text-gray);
